refactor: order module & message fix
