# src/route/order.js
@@ -5,10 +5,9 @@ const {
   readAll,
   update,
   delete: remove,
-  orderCancel,
   changeOrderStatus,
 } = require("../controller/order");
-const {USER_ROLES} = require("../utils/constants");
+const { USER_ROLES } = require("../utils/constants");
 const schema = require("../model/validation/order");
 const validate = require("../middleware/validate");
 const authenticate = require("../middleware/authenticate");
@@ -18,7 +17,11 @@ const router = express.Router();
 
 router
   .route("")
-  .get(authenticate, authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]), readAll)
+  .get(
+    authenticate,
+    authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]),
+    readAll,
+  )
   .post(
     authenticate,
     authorize([USER_ROLES.CUSTOMER]),
@@ -29,7 +32,11 @@ router
 router
   .route("/:id")
   .get(authenticate, authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]), read)
-  .delete(authenticate, authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]), remove)
+  .delete(
+    authenticate,
+    authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]),
+    remove,
+  )
   .put(
     authenticate,
     authorize([USER_ROLES.ADMIN, USER_ROLES.CUSTOMER]),
@@ -40,8 +47,12 @@ router
 // router
 //   .route("/:id/cancel")
 //   .get(authenticate, authorize([USER_ROLES.ADMIN]), orderCancel);
-router
-  .route("/:id/changeOrderStatus")
-  .get(authenticate, authorize([USER_ROLES.ADMIN]), changeOrderStatus);
+
+router.route("/:id/changeOrderStatus").get(
+  authenticate,
+  authorize([USER_ROLES.ADMIN]),
+  // validate(schema.orderStatus),
+  changeOrderStatus,
+);
 
 module.exports = router;
