# swagger.yaml
@@ -639,10 +639,10 @@ paths:
                             price:
                               type: number
                               example: 500
-                            userId:
-                              $ref: "#/components/schemas/UserDTO"
-                            menuId:
-                              $ref: "#/components/schemas/MenuDTO"
+                            user:
+                              $ref: "#/components/schemas/UserObjDTO"
+                            menu:
+                              $ref: "#/components/schemas/MenuObjDTO"
 
                         - $ref: "#/components/schemas/Timestamp"
                   meta:
@@ -708,7 +708,7 @@ paths:
                 properties:
                   data:
                     allOf:
-                      - $ref: "#/components/schemas/Cart"
+                      - $ref: "#/components/schemas/CartObj"
 
         "400":
           $ref: "#/components/responses/400"
@@ -807,7 +807,6 @@ paths:
                             order_status:
                               type: string
                               enum: [1, 2, 3, 4, 5]
-
                               example: 1
                             order_type:
                               type: string
@@ -820,7 +819,7 @@ paths:
                             user:
                               $ref: "#/components/schemas/UserObjDTO"
                             menu:
-                              $ref: "#/components/schemas/MenuDTO"
+                              $ref: "#/components/schemas/MenuObjDTO"
 
                         - $ref: "#/components/schemas/Timestamp"
                   meta:
@@ -864,10 +863,10 @@ paths:
                   type: string
                   enum: [ 1, 2, 3 ]
                   example: 1
-                user:
-                  $ref: "#/components/schemas/UserObjDTO"
-                menu:
-                  $ref: "#/components/schemas/MenuObjDTO"
+                userId:
+                  $ref: "#/components/schemas/UserDTO"
+                menuId:
+                  $ref: "#/components/schemas/MenuDTO"
               required: [quantity, userId, menuId, price, order_date]
       responses:
         "201":
@@ -902,7 +901,7 @@ paths:
                 properties:
                   data:
                     allOf:
-                      - $ref: "#/components/schemas/Order"
+                      - $ref: "#/components/schemas/OrderObj"
 
         "400":
           $ref: "#/components/responses/400"
@@ -940,10 +939,10 @@ paths:
                   type: string
                   enum: [ 1, 2, 3 ]
                   example: 1
-                user:
-                  $ref: "#/components/schemas/UserObjDTO"
-                menu:
-                  $ref: "#/components/schemas/MenuObjDTO"
+                userId:
+                  $ref: "#/components/schemas/UserDTO"
+                menuId:
+                  $ref: "#/components/schemas/MenuDTO"
       responses:
         "200":
           description: "Successfully Updated"
@@ -1133,6 +1132,27 @@ components:
 
         - $ref: "#/components/schemas/Timestamp"
 
+    CartObj:
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+              example: 1
+            quantity:
+              type: number
+              example: 5
+            price:
+              type: number
+              example: 500
+            user:
+              $ref: "#/components/schemas/UserObjDTO"
+            menu:
+              $ref: "#/components/schemas/MenuObjDTO"
+
+        - $ref: "#/components/schemas/Timestamp"
+
     Order:
       allOf:
         - type: object
@@ -1144,7 +1164,7 @@ components:
             order_date:
               type: string
               format: date-time
-              example: 21/05/2023
+              example: 2025-11-29 12:57:30.972000
             order_status:
               type: string
               enum: [1, 2, 3, 4, 5, 6]
@@ -1161,6 +1181,37 @@ components:
               $ref: "#/components/schemas/UserDTO"
             menuId:
               $ref: "#/components/schemas/MenuDTO"
+
+        - $ref: "#/components/schemas/Timestamp"
+
+    OrderObj:
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: integer
+              format: int32
+              example: 1
+            order_date:
+              type: string
+              format: date-time
+              example: 2025-11-29 12:57:30.972000
+            order_status:
+              type: string
+              enum: [ 1, 2, 3, 4, 5, 6 ]
+              example: 1
+            order_type:
+              type: string
+              enum: [ 1, 2 ]
+              example: 1
+            payment_status:
+              type: string
+              enum: [ 1, 2, 3 ]
+              example: 1
+            user:
+              $ref: "#/components/schemas/UserObjDTO"
+            menu:
+              $ref: "#/components/schemas/MenuObjDTO"
 
         - $ref: "#/components/schemas/Timestamp"
 
@@ -1199,7 +1250,7 @@ components:
           type: string
           example: "Added to cart successfully"
         data:
-          $ref: "#/components/schemas/Cart"
+          $ref: "#/components/schemas/CartObj"
     OrderCreatedDTO:
       type: object
       properties:
@@ -1211,7 +1262,7 @@ components:
           type: string
           example: "Order added to successfully"
         data:
-          $ref: "#/components/schemas/Order"
+          $ref: "#/components/schemas/OrderObj"
 
     UserUpdatedDTO:
       type: object
@@ -1248,7 +1299,7 @@ components:
           type: string
           example: Cart updated successfully
         data:
-          $ref: "#/components/schemas/Cart"
+          $ref: "#/components/schemas/CartObj"
     OrderUpdatedDTO:
       type: object
       properties:
@@ -1260,7 +1311,7 @@ components:
           type: string
           example: Order updated successfully
         data:
-          $ref: "#/components/schemas/Order"
+          $ref: "#/components/schemas/OrderObj"
 
     Timestamp:
       type: object
@@ -1313,7 +1364,7 @@ components:
         limit:
           type: integer
           format: int32
-          example: 10
+          example: 5
         totalPage:
           type: integer
           format: int32
@@ -1321,7 +1372,7 @@ components:
         totalItems:
           type: integer
           format: int32
-          example: 50
+          example: 25
   #      required:
   #        - page
   #        - limit
@@ -1403,7 +1454,7 @@ components:
       schema:
         type: integer
         format: int32
-        example: 2
+        example: 1
     limitParam:
       in: query
       name: limit
@@ -1412,7 +1463,7 @@ components:
       schema:
         type: integer
         format: int32
-        example: 10
+        example: 5
     sortTypeParam:
       in: query
       name: sort_type
@@ -1434,7 +1485,7 @@ components:
       description: Search term
       schema:
         type: string
-        example: title
+        example:
     approveParam:
       in: query
       name: approve
@@ -1455,7 +1506,7 @@ components:
       description: order approval status
       schema:
         type: string
-        example: order_taken
+        example: 1
     idPathParam:
       in: path
       name: id
